--- a/index.html
+++ b/index.html
@@ -642,7 +642,7 @@
                 <a href="https://oroboroslab.github.io/#models">Models</a>
                 <a href="https://oroboroslab.github.io/#technology">Technology</a>
                 <a href="#" class="active">CORVUS-1B</a>
-                <a href="https://ollama.com/oroboroslab/corvus-3b">CORVUS-3B</a>
+                <a href="https://ollama.com/oroboroslabs/corvus-3b">CORVUS-3B</a>
                 <a href="https://oroboroslab.github.io/connection-core.html">Memory Core</a>
                 <a href="https://github.com/oroboroslab" class="nav-github">GitHub</a>
             </div>
@@ -664,15 +664,15 @@
             <span class="badge">Edge-Ready</span>
         </div>
         <div class="cta-group">
-            <a href="https://ollama.com/oroboroslab/corvus-1b" class="btn btn-primary">Get on Ollama</a>
-            <a href="https://github.com/oroboroslab/corvus-1b" class="btn btn-secondary">View Source</a>
+            <a href="https://ollama.com/oroboroslabs/corvus-1b" class="btn btn-primary">Get on Ollama</a>
+            <a href="https://github.com/oroboroslabs/corvus-1b" class="btn btn-secondary">View Source</a>
         </div>
     </section>
 
     <!-- Install Section -->
     <section class="install">
         <div class="code-block">
-            <code>ollama run oroboroslab/corvus-1b</code>
+            <code>ollama run oroboroslabs/corvus-1b</code>
             <button class="copy-btn" onclick="copyCode()">Copy</button>
         </div>
     </section>
@@ -793,7 +793,7 @@
 response = requests.<span class="function">post</span>(
     <span class="string">'http://localhost:11434/api/generate'</span>,
     json={
-        <span class="string">'model'</span>: <span class="string">'oroboroslab/corvus-1b'</span>,
+        <span class="string">'model'</span>: <span class="string">'oroboroslabs/corvus-1b'</span>,
         <span class="string">'prompt'</span>: <span class="string">'Write a Python function to calculate factorial'</span>,
         <span class="string">'stream'</span>: <span class="keyword">False</span>
     }
@@ -804,7 +804,7 @@ response = requests.<span class="function">post</span>(
     method: <span class="string">'POST'</span>,
     headers: { <span class="string">'Content-Type'</span>: <span class="string">'application/json'</span> },
     body: JSON.<span class="function">stringify</span>({
-        model: <span class="string">'oroboroslab/corvus-1b'</span>,
+        model: <span class="string">'oroboroslabs/corvus-1b'</span>,
         prompt: <span class="string">'Create a React component for a login form'</span>,
         stream: <span class="keyword">false</span>
     })
@@ -815,7 +815,7 @@ console.<span class="function">log</span>(data.response);</pre>
             <pre id="curl-code" style="display:none;">curl http://localhost:11434/api/generate \
   -H <span class="string">"Content-Type: application/json"</span> \
   -d <span class="string">'{
-    "model": "oroboroslab/corvus-1b",
+    "model": "oroboroslabs/corvus-1b",
     "prompt": "Explain quantum computing simply",
     "stream": false
   }'</span></pre>
@@ -881,13 +881,13 @@ console.<span class="function">log</span>(data.response);</pre>
                 <h3>CORVUS-1B</h3>
                 <div class="size">1.3 GB</div>
                 <p>Edge deployment, development, education. Ultra-compact for resource-constrained environments.</p>
-                <a href="https://ollama.com/oroboroslab/corvus-1b" class="btn btn-primary">Get CORVUS-1B</a>
+                <a href="https://ollama.com/oroboroslabs/corvus-1b" class="btn btn-primary">Get CORVUS-1B</a>
             </div>
             <div class="family-card">
                 <h3>CORVUS-3B</h3>
                 <div class="size">2.0 GB</div>
                 <p>General purpose, coding, reasoning. 7B-class performance in a 3B package.</p>
-                <a href="https://ollama.com/oroboroslab/corvus-3b" class="btn btn-secondary">Get CORVUS-3B</a>
+                <a href="https://ollama.com/oroboroslabs/corvus-3b" class="btn btn-secondary">Get CORVUS-3B</a>
             </div>
         </div>
     </section>
@@ -906,7 +906,7 @@ console.<span class="function">log</span>(data.response);</pre>
 
     <script>
         function copyCode() {
-            navigator.clipboard.writeText('ollama run oroboroslab/corvus-1b');
+            navigator.clipboard.writeText('ollama run oroboroslabs/corvus-1b');
             const btn = document.querySelector('.copy-btn');
             btn.textContent = 'Copied!';
             setTimeout(() => btn.textContent = 'Copy', 2000);
